update UserProfileController API endpoints to /api/v1 prefix and normalize permission names to lowercase, add findUserByEmailWithPermissions query with EntityGraph to eagerly load role and permissions for authentication, add debug logging for authorities in JwtRequestFilter, update DatabaseSeeder to use lowercase model names in permission generation and add try-catch blocks for table existence checks, and add findUserForAuthentication method in UserService to use optimized query for loading user with permissions